[gd_scene load_steps=32 format=3 uid="uid://uan2wdyuprb6"]

[ext_resource type="Script" path="res://addons/dialogic/Modules/DefaultLayouts/Default/DialogicDefaultLayout.gd" id="1"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Text/node_dialog_text.gd" id="2"]
[ext_resource type="Material" uid="uid://0wc7bedn7ee8" path="res://addons/dialogic/Modules/Background/default_background_transition.tres" id="2_f6bas"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Text/node_name_label.gd" id="3"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Character/node_portrait_container.gd" id="3_dbhei"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Choice/node_choice_button.gd" id="4"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Background/node_background_holder.gd" id="5_uvb2c"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Text/node_type_sound.gd" id="10"]
[ext_resource type="AudioStream" uid="uid://c2viukvbub6v6" path="res://addons/dialogic/Example Assets/sound-effects/typing4.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://b6c1p14bc20p1" path="res://addons/dialogic/Example Assets/sound-effects/typing1.wav" id="14"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Text/node_input.gd" id="14_d2258"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/DefaultLayouts/Default/autoadvance_indicator.gd" id="15_ptoy3"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/DefaultLayouts/Default/animations.gd" id="16_07l6b"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Choice/node_button_sound.gd" id="18"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/Text/node_next_indicator.gd" id="20_ljcq2"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/DefaultLayouts/Default/ExampleGlossaryPopup.gd" id="20_vmnp2"]
[ext_resource type="PackedScene" path="res://addons/dialogic/Modules/DefaultLayouts/ExampleHistoryScene.tscn" id="22_854kg"]
[ext_resource type="Script" path="res://addons/dialogic/Modules/TextInput/node_text_input.gd" id="22_ltkcf"]
[ext_resource type="FontFile" uid="uid://vrrmdx83skor" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Regular.ttf" id="23_gyqve"]
[ext_resource type="FontFile" uid="uid://cc4xli25271fd" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Bold.ttf" id="24_aa4pl"]
[ext_resource type="FontFile" uid="uid://b5c0p00x6g6u5" path="res://addons/dialogic/Example Assets/Fonts/Roboto-Italic.ttf" id="25_wt3bc"]

[sub_resource type="Animation" id="Animation_au0a2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_6kbwc"]
resource_name = "new_text"
length = 0.4
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(3, 3, 3, 3, 3),
"points": PackedFloat32Array(0, -0.025, 0, 0.025, 0, 0.005, -0.025, 0, 0.025, 0, -0.005, -0.025, 0, 0.025, 0, 0.005, -0.025, 0, 0.025, 0, 0, -0.025, 0, 0.025, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4)
}

[sub_resource type="Animation" id="Animation_g6k55"]
resource_name = "textbox_fade_up"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 50), Vector2(0, 19.6793), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_htbgc"]
resource_name = "textbox_pop"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0899883, 0.0258223, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.793957, 0.778082), Vector2(0.937299, 1.14248), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialogicTextAnchor/DialogTextAnimationParent:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c14kh"]
_data = {
"RESET": SubResource("Animation_au0a2"),
"new_text": SubResource("Animation_6kbwc"),
"textbox_fade_up": SubResource("Animation_g6k55"),
"textbox_pop": SubResource("Animation_htbgc")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q3vpc"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wpkyg"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="FontVariation" id="FontVariation_7goc6"]

[sub_resource type="AudioStream" id="AudioStream_hu7ba"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a3cyk"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="DefaultDialogNode" type="CanvasLayer"]
script = ExtResource("1")
name_label_box_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.843137)

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="DialogicNode_BackgroundHolder" type="ColorRect" parent="BackgroundLayer"]
material = ExtResource("2_f6bas")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_uvb2c")

[node name="PortraitLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Portraits" type="Control" parent="PortraitLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DialogicNode_PortraitContainer1" type="Control" parent="PortraitLayer/Portraits"]
layout_mode = 1
anchor_right = 0.231771
anchor_bottom = 1.0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_dbhei")
metadata/_edit_use_anchors_ = true

[node name="DialogicNode_PortraitContainer2" type="Control" parent="PortraitLayer/Portraits"]
layout_mode = 1
anchor_left = 0.190104
anchor_right = 0.401042
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_dbhei")
position_index = 1
metadata/_edit_use_anchors_ = true

[node name="DialogicNode_PortraitContainer3" type="Control" parent="PortraitLayer/Portraits"]
layout_mode = 1
anchor_left = 0.371528
anchor_right = 0.625868
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_dbhei")
position_index = 2
metadata/_edit_use_anchors_ = true

[node name="DialogicNode_PortraitContainer4" type="Control" parent="PortraitLayer/Portraits"]
layout_mode = 1
anchor_left = 0.592882
anchor_right = 0.805556
anchor_bottom = 0.996914
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_dbhei")
position_index = 3
metadata/_edit_use_anchors_ = true

[node name="DialogicNode_PortraitContainer5" type="Control" parent="PortraitLayer/Portraits"]
layout_mode = 1
anchor_left = 0.776042
anchor_top = -0.00462963
anchor_right = 1.00434
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_dbhei")
position_index = 4
metadata/_edit_use_anchors_ = true

[node name="DefaultStyle" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Animations" type="AnimationPlayer" parent="DefaultStyle"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_c14kh")
}
autoplay = "RESET"
script = ExtResource("16_07l6b")

[node name="DialogicTextAnchor" type="Control" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="DialogTextAnimationParent" type="Control" parent="DefaultStyle/DialogicTextAnchor"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="DialogTextPanel" type="PanelContainer" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent"]
unique_name_in_owner = true
self_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.843137)
custom_minimum_size = Vector2(500, 110)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.0
offset_top = -154.0
offset_right = 294.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(275, 60)
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q3vpc")
metadata/_edit_layout_mode = 1

[node name="DialogicNode_DialogText" type="RichTextLabel" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel" node_paths=PackedStringArray("textbox_root")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 15
theme_override_font_sizes/bold_font_size = 15
theme_override_font_sizes/italics_font_size = 15
theme_override_font_sizes/bold_italics_font_size = 15
bbcode_enabled = true
text = "Some default text"
visible_characters_behavior = 1
script = ExtResource("2")
textbox_root = NodePath("..")

[node name="DialogicNode_TypeSounds" type="AudioStreamPlayer" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel/DialogicNode_DialogText"]
unique_name_in_owner = true
script = ExtResource("10")
play_every_character = 0

[node name="NextIndicator" type="Control" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource("20_ljcq2")
show_on_questions = true
metadata/_edit_layout_mode = 1

[node name="AutoAdvanceProgressbar" type="ProgressBar" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.188235)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.001
value = 0.5
show_percentage = false
script = ExtResource("15_ptoy3")

[node name="NameLabelHolder" type="Control" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel"]
layout_mode = 2
mouse_filter = 2

[node name="NameLabelPanel" type="PanelContainer" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel/NameLabelHolder"]
unique_name_in_owner = true
self_modulate = Color(0.00784314, 0.00784314, 0.00784314, 0.843137)
layout_mode = 1
offset_left = -10.0
offset_top = -49.0
offset_right = -1.0
offset_bottom = -24.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wpkyg")
metadata/_edit_layout_mode = 1
metadata/_edit_use_custom_anchors = true
metadata/_edit_group_ = true

[node name="DialogicNode_NameLabel" type="Label" parent="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel/NameLabelHolder/NameLabelPanel" node_paths=PackedStringArray("name_label_root")]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("FontVariation_7goc6")
theme_override_font_sizes/font_size = 15
text = "S"
script = ExtResource("3")
name_label_root = NodePath("..")

[node name="InputCatcher" type="Control" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("14_d2258")

[node name="Choices" type="VBoxContainer" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -86.5
offset_top = -103.0
offset_right = 86.5
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1
metadata/_edit_layout_mode = 1

[node name="DialogicNode_ChoiceButton1" type="Button" parent="DefaultStyle/Choices"]
layout_mode = 2
text = "Some text"
script = ExtResource("4")

[node name="DialogicNode_ChoiceButton2" type="Button" parent="DefaultStyle/Choices"]
layout_mode = 2
text = "Some text"
script = ExtResource("4")

[node name="DialogicNode_ChoiceButton3" type="Button" parent="DefaultStyle/Choices"]
layout_mode = 2
text = "Some text"
script = ExtResource("4")

[node name="DialogicNode_ChoiceButton4" type="Button" parent="DefaultStyle/Choices"]
layout_mode = 2
text = "Some text"
script = ExtResource("4")

[node name="DialogicNode_ChoiceButton5" type="Button" parent="DefaultStyle/Choices"]
layout_mode = 2
text = "Some text"
script = ExtResource("4")

[node name="DialogicNode_ChoiceButton6" type="Button" parent="DefaultStyle/Choices"]
layout_mode = 2
text = "Some text"
script = ExtResource("4")

[node name="DialogicNode_ButtonSound" type="AudioStreamPlayer" parent="DefaultStyle/Choices"]
unique_name_in_owner = true
script = ExtResource("18")
sound_pressed = ExtResource("14")
sound_hover = ExtResource("11")
sound_focus = SubResource("AudioStream_hu7ba")

[node name="DialogicNode_TextInput" type="Control" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -50.0
offset_right = 210.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("22_ltkcf")
input_line_edit = NodePath("TextInputPanel/VBoxContainer/InputField")
text_label = NodePath("TextInputPanel/VBoxContainer/TextLabel")
confirmation_button = NodePath("TextInputPanel/VBoxContainer/ConfirmationButton")
metadata/_edit_layout_mode = 1

[node name="TextInputPanel" type="PanelContainer" parent="DefaultStyle/DialogicNode_TextInput"]
unique_name_in_owner = true
self_modulate = Color(0, 0, 0, 0.780392)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q3vpc")

[node name="VBoxContainer" type="VBoxContainer" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel"]
layout_mode = 2

[node name="TextLabel" type="Label" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel/VBoxContainer"]
layout_mode = 2
text = "Please enter some text:"
autowrap_mode = 3

[node name="InputField" type="LineEdit" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel/VBoxContainer"]
layout_mode = 2

[node name="ConfirmationButton" type="Button" parent="DefaultStyle/DialogicNode_TextInput/TextInputPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Confirm"

[node name="Glossary" type="Control" parent="DefaultStyle"]
layout_mode = 1
anchors_preset = 0
script = ExtResource("20_vmnp2")

[node name="Panel" type="PanelContainer" parent="DefaultStyle/Glossary"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -115.0
offset_right = 104.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_a3cyk")
metadata/_edit_use_custom_anchors = true
metadata/_edit_layout_mode = 1

[node name="VBox" type="VBoxContainer" parent="DefaultStyle/Glossary/Panel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Title" type="Label" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
text = "MyGlossaryEntry"

[node name="HSeparator" type="HSeparator" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2

[node name="Text" type="RichTextLabel" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
bbcode_enabled = true
text = "Some text"
fit_content = true

[node name="Extra" type="RichTextLabel" parent="DefaultStyle/Glossary/Panel/VBox"]
layout_mode = 2
theme_override_colors/default_color = Color(1, 1, 1, 0.584314)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[right]Wow, some text!"
fit_content = true

[node name="Control" type="Control" parent="DefaultStyle/Glossary/Panel"]
show_behind_parent = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="DefaultStyle/Glossary/Panel/Control"]
layout_mode = 0
offset_left = -0.999999
offset_top = -14.0
offset_right = 19.0
offset_bottom = 6.0
rotation = 0.75799
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxFlat_a3cyk")

[node name="ExampleHistoryScene" parent="." instance=ExtResource("22_854kg")]
history_font_normal = ExtResource("23_gyqve")
history_font_bold = ExtResource("24_aa4pl")
history_font_italics = ExtResource("25_wt3bc")
metadata/_edit_lock_ = true

[connection signal="meta_hover_ended" from="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel/DialogicNode_DialogText" to="DefaultStyle/Glossary" method="_on_dialogic_display_dialog_text_meta_hover_ended"]
[connection signal="meta_hover_started" from="DefaultStyle/DialogicTextAnchor/DialogTextAnimationParent/DialogTextPanel/DialogicNode_DialogText" to="DefaultStyle/Glossary" method="_on_dialogic_display_dialog_text_meta_hover_started"]
